--- a/index.ipynb
+++ b/index.ipynb
@@ -127,16 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Canada'"
+       "'Italy'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mexico = None\n",
+    "mexico = Non\n",
     "mexico"
    ]
   },
